--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Train Booking Service
 
 Prerequisites:
   1. Eclipse should be installed. Download it from here ( https://www.eclipse.org/downloads/packages/installer )  
-  2. Apache Tomcat server should be installed ( https://tomcat.apache.org/download-90.cgi#9.0.89 )
+  2. Apache Tomcat server should be installed ( https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.89/bin/apache-tomcat-9.0.89.tar.gz )
   3. Clone this project in your machine
 
 
