--- a/README
+++ b/README
@@ -1,11 +1,12 @@
 Train Ticket Booking Service
 
   This train ticket service is implemented on top of servlet requests which is very simple to create dynamic web pages. 
-  Here we used H2 Database as in memory database to store the data. So server restarted, data will not be available as we follow in-memory database. 
+  Here we used H2 Database as in memory database to store the data. If server restarted, data will not be available as we follow in-memory database. 
   We can persist this data in disk too if we need. 
-  Also supported hash as in memory database. It is based on inmemoryType constand in Database.java
+  Also supported Hash as in memory database.
+  So this service inmemory is based on inmemoryType constant in Database.java
 
-Prerequisites:
+Steps:
   1. Eclipse should be installed. Download it from here ( https://www.eclipse.org/downloads/packages/installer )  
   2. Apache Tomcat server should be installed ( https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.89/bin/apache-tomcat-9.0.89.tar.gz )
   3. Clone this project in your machine
@@ -13,6 +14,8 @@ Prerequisites:
   5. Get json jar and it must added in build path (https://mvnrepository.com/artifact/org.json/json/20140107)
   6. Download H2 database jar and add build path (https://search.maven.org/remotecontent?filepath=com/h2database/h2/2.2.224/h2-2.2.224.jar)
   7. If jars not effect not class or found exception occur, kindly add these jars under tomcat lib folder
+  8. Run the project as Debug on server mode with our installed tomcat server.
+
 
 
 APIs:
